[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]
fastapi = "*"
uvicorn = "*"
httpx = "*"
beautifulsoup4 = "*"
